<resources>
    <string name="app_name">NFC I/O</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_details">Mifare Classic 1k</string>
    <string name="title_activity_mifare_ultralight_c">Mifare Ultralight C</string>
    <string name="title_activity_mifare_classic1k_write">Mifare Classic 1k</string>
    <string name="title_activity_mifare_ultralight_cwrite">Card Write</string>
    <string name="mifare_classic_1k">Mifare Classic 1k</string>
    <string name="uid">UID</string>
    <string name="card_type">Card Type</string>
    <string name="memory">Memory</string>
    <string name="number_of_sector">Number of Sector</string>
    <string name="number_of_block">Number of Block</string>
    <string name="sector_and_block_values">Sector and Block Values:</string>
    <string name="hex_value">Hex Value</string>
    <string name="us_ascii_value">US-ASCII Value</string>
    <string name="sector">Sector</string>
    <string name="write">Write</string>
    <string name="mifare_ultralight_c">Mifare Ultralight C</string>
    <string name="page_size">Page Size</string>
    <string name="page_count">Page Count</string>
    <string name="page_value">Page Value:</string>
    <string name="page">Page</string>
    <string name="add_unit_id">ca-app-pub-9124248919308413/9465799285</string>
    <string name="beyond_on_infinity">Beyond The Infinity</string>
    <string name="uc_help_text">RED Color blocks (Page #0 to #3) and page(#40 to #43) or page(#40 to #41) are manufacturer area. You can not modify this block. This blocks are for OTP, manufacturer data, and locking bits. </string>
    <string name="c_1k_help_text">RED Color blocks are manufacturer area. You can not modify this block. This blocks are used for locking. </string>
    <string name="_ok">OK</string>
    <string name="no_nfc">To run this application Your device must have NFC Technology. Unfortunately Your device does not have NFC.Sorry for this inconvenience. Please press OK to exit.</string>
    <string name="nfc_disabled">Without NFC You cannot read Tags.Currently NFC is not enabled in your device. Please go to the NFC settings and enable NFC.</string>
    <string name="tap_your_card">Tap Your Card</string>
    <string name="nfc_write">NFC Write</string>
    <string name="authentication_failed">Authentication Failed! Please try with another card.</string>
    <string name="app_exit">Are you really want to exit NFC I/O ?</string>
    <string name="_cancel">Cancel</string>
    <string name="welcome_nfc_note">Welcome To NFC World!</string>
    <string name="about_us">About Us</string>
    <string name="menu">menu</string>
    <string name="tag_info">Tag Info</string>
    <string name="title_activity_tag_info">Tag Information</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_tag_info_dialog">Tag Information</string>
    <string name="title_activity_tag_info_classic1k">Mifare Classic Tag Info</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tag_info_ultralight_c">Mifare Ultralight Tag Info</string>
    <string name="tag_discover">Tag Discover</string>
    <string name="card_tag_not_found">Sorry! This tag is not familiar to us. Please try again with different card.</string>
    <string name="card_support">Card Support</string>
    <string name="supported_tag_type">Sorry Only Mifare Classic 1k and Mifare Ultralight C are supported in this apps.</string>
    <string name="card_info">Card Information</string>
    <string name="card_info_not_found">Sorry! Card Information not found. Please try again with different card.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_language_change">Change Language</string>
    <string name="eng_lang">English (United States)</string>
    <string name="bang_lang">বাংলা</string>
    <string name="germ_lang">German</string>
    <string name="span_lang">Spain</string>
    <string name="frnch_lang">France</string>
    <string name="rush_lang">Russia</string>
    <string name="resticted_lang">This feature are available only pro-version.</string>
    <string name="language_change">Language Change</string>
    <string name="recommend_to_a_friend">Recommend to a friend</string>
    <string name="lang_change_diaglog">Language Changes</string>
    <string name="dialog_wait_mess">Please wait...</string>
    <string name="adapter_sector_number">Sector #</string>
    <string name="adapter_null">" NULL"</string>
    <string name="adapter_page1">Page 0 to 3</string>
    <string name="adapter_page2">Page 40 to 43</string>
    <string name="adapter_page3">Page 40 to 41</string>
    <string name="to">" to "</string>
    <string name="write_1_value">Write block #1 value</string>
    <string name="write_2_values">Write block #2 value</string>
    <string name="write_block">Write block #</string>
    <string name="values">" value"</string>
    <string name="write_page">Write page #</string>
    <string name="app_share">Yahoo!!! I am using this apps for control my NFC card, you can try this. It is so simple and very user friendly. \n\nhttps://play.google.com/store/apps/details?id=com.nfcutils.app</string>
    <string name="mfc_1k_details">
        <![CDATA[
            "<p>The MIFARE Classic card is fundamentally just a memory storage device, where the memory is divided into segments and blocks with simple security mechanisms for access control. They are ASIC-based and have limited computational power. Thanks to their reliability and low cost, those cards are widely used for electronic wallet, access control, corporate ID cards, transportation or stadium ticketing.</p>\n"
                "<h3><strong>Mifare Classic 1k:</strong></h3>\n"
                "<ul style=\"list-style-type: disc;\">\n"
                "<li><span style=\"color: #0000ff;\">The MIFARE Classic 1K offers <span style=\"color: #ff0000;\">1024 bytes</span> of data storage, split into 16 sectors; each sector is protected by two different keys, called A and B.</span></li>\n"
                "<li><span style=\"color: #0000ff;\">Each key can be programmed to allow operations such as reading, writing, increasing value blocks, etc.</span></li>\n"
                "</ul>\n"
                "<h3><strong>Mifare Classic 4k:</strong></h3>\n"
                "<ul style=\"list-style-type: disc;\">\n"
                "<li><span style=\"color: #0000ff;\">MIFARE Classic 4K offers <span style=\"color: #ff0000;\">4096 bytes</span> split into forty sectors, of which 32 are same size as in the 1K with eight more that are quadruple size sectors.</span></li>\n"
                "</ul>\n"
                "<h3><strong>Mifare Classic mini:</strong></h3>\n"
                "<ul style=\"list-style-type: disc;\">\n"
                "<li><span style=\"color: #0000ff;\">MIFARE Classic mini offers <span style=\"color: #ff0000;\">320 bytes</span> split into five sectors. </span></li>\n"
                "<li><span style=\"color: #0000ff;\">For each of these card types, <span style=\"color: #ff0000;\">16 bytes</span> per sector are reserved for the keys and access conditions and can not normally be used for user data. </span></li>\n"
                "<li><span style=\"color: #0000ff;\">Also, the very first 16 bytes contain the serial number of the card and certain other manufacturer data and are read only.</span></li>\n"
                "</ul>\n"
                "<h3><strong>Key Applications:</strong></h3>\n"
                "<ol style=\"list-style-type: lower-roman;\">\n"
                "<li><span style=\"color: #0000ff;\">Limited-use tickets in public transport</span></li>\n"
                "<li><span style=\"color: #0000ff;\">Event ticketing (stadiums, exhibitions, leisure parks)</span></li>\n"
                "<li><span style=\"color: #0000ff;\">Loyalty</span></li>\n"
                "</ol>\n" 
                "<p>That brings the net storage capacity of these cards down to 752 bytes for MIFARE Classic 1K, 3440 bytes for MIFARE Classic 4K, and 224 bytes for Mini. It uses an NXP proprietary security protocol (Crypto-1) for authentication and ciphering.</p>\n"
                "<p>The Samsung TecTile NFC tag stickers use MIFARE Classic chips.<br />This means only devices with an NXP NFC controller chip can read or write these tags.</p>\n"
                "<p>At the moment BlackBerry phones, the Nokia Lumia 610 (August 2012), the Google Nexus 4, Google Nexus 7 LTE and Nexus 10 (October 2013) can't read/write TecTile stickers.</p>\n"
                "<h3>&nbsp;</h3>\n"
        ]]>
    </string>
</resources>