<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_mifare_classic1k_write"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nfcutils.app.activity.MifareClassic1kWriteActivity"
    tools:showIn="@layout/activity_mifare_classic1k_write">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/rgMFC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbHex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hex_value"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rbAscii"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/us_ascii_value"/>
        </RadioGroup>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:contentPadding="5dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvSector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sector"
                    android:textColor="@color/text_color_bold"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/tvBlock1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/tvBlock2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/tvBlock3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/tvBlock4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tvSectorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_1k_help_text"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:textColor="@color/text_color_bold"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/mfcWritePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:visibility="gone">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilBlock1Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="16"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilBlock2Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="16"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilBlock3Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="16"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilBlock4Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <Button
            android:id="@+id/button_Write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_round"
            android:textColor="#FFF"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
